added image and edited index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="/Images/Msurshima's picture.jpg" alt="me">
+        <img src="Msurshima's picture.jpg" alt="me">
         <div class="name">
             <h3>Akiga Elizabeth</h3>
             <span>@lizziedee</span>
